--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -29,7 +29,10 @@
     margin-left: auto;
   }
   @media screen and (min-width: 1200px) {
-    width: 370px;
+    width: 450px;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -94,8 +97,10 @@
     order: -1;
     width: 500px;
   }
-  
-  // margin-right: 70px;
+  @media screen and (min-width: 1200px) {    
+    width: 500px;
+    margin-right: auto;
+  }  
 }
 
 .benefits-transfer {
