--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,9 +1,13 @@
 .contacts-bg {
   @media screen and (max-width: 767px) {
     background-image: url(/images/contacts/contacts-m@1x.png);
+    margin-left: auto;
+    margin-right: auto;
   }
   @media screen and (min-width: 768px) {
     background-image: url(/images/contacts/contacts-t@1x.png);
+    margin-left: auto;
+    margin-right: auto;
   }
   @media screen and (min-width: 1200px) {
     background-image: url(/images/contacts/contacts-d@1x.png);
@@ -18,20 +22,21 @@
     display: flex;
     padding-bottom: 44px;
   }
-  
 }
 
 .contacts {
-  margin-left: auto;
-  margin-right: auto;
   @media screen and (max-width: 767px) {
-    max-width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 480px;
     height: 496px;
     padding: 0 31px;
     padding-top: 84px;
     padding-bottom: 84px;
   }
-  @media screen and (min-width: 768px) {    
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+    margin-right: auto;
     width: 768px;
     height: 449px;
     padding: 0 39px;
@@ -39,21 +44,27 @@
     padding-bottom: 100px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1200px;
+    width: 585px;
     height: 644px;
     padding: 0 15px;
     padding-top: 130px;
     padding-bottom: 130px;
-  }  
+    padding-left: 100px;
+  }
 }
 
 .contacts-list {
   margin: 0;
   padding-left: 0;
   list-style: none;
-  
+  @media screen and (max-width: 767px) {
+    padding-bottom: 44px;
+  }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 330px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 70px;
   }
 }
 
@@ -62,7 +73,7 @@
 }
 
 .contacts-list__link {
-  display: flex;  
+  display: flex;
   font-size: 18px;
   line-height: calc(30 / 18);
   letter-spacing: 0.02em;
@@ -89,10 +100,10 @@
 }
 
 @media screen and (max-width: 767px) {
-    .contacts-list__link-transfer {
-      display: none;
-    }
+  .contacts-list__link-transfer {
+    display: none;
   }
+}
 
 .contacts-hours__title {
   display: flex;
