--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -28,7 +28,7 @@
   @media screen and (max-width: 767px) {
     margin-left: auto;
     margin-right: auto;
-    width: 480px;
+    max-width: 480px;
     height: 496px;
     padding: 0 31px;
     padding-top: 84px;
