--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -4,13 +4,13 @@
 
 .services {    
   @media screen and (max-width: 767px) {
-    background-image: url(/images/services/services-m@1x.png);
+    background-image: url(../images/services/services-m@1x.png);
   }
   @media screen and (min-width: 768px) {
-    background-image: url(/images/services/services-t@1x.png);
+    background-image: url(../images/services/services-t@1x.png);
   }
   @media screen and (min-width: 1200px) {
-    background-image: url(/images/services/services-d@1x.png);
+    background-image: url(../images/services/services-d@1x.png);
   }
   background-repeat: no-repeat;
   background-position: center;
