--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -14,6 +14,7 @@
   }
   background-repeat: no-repeat;
   background-position: center;
+  
 }
 
 .contacts-adress {
@@ -25,7 +26,16 @@
 }
 
 .contacts {
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 479px) {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 480px;
+    height: 496px;
+    padding: 0 31px;
+    padding-top: 84px;
+    padding-bottom: 84px;
+  }
+  @media screen and (min-width: 480px) {
     margin-left: auto;
     margin-right: auto;
     width: 480px;
