--- a/css/main.css
+++ b/css/main.css
@@ -1207,7 +1207,9 @@ img {
 
 .media {
   position: absolute;
-  background-color: aqua;
+  background-color: #f7f7f7;
+  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   width: 680px;
   height: 90px;
   display: -webkit-box;
